--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,8 +122,8 @@
 							        <li class="nav-item dropdown active">
 							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle active" href="index.html" role="button">Home</a>
 							        	<ul class="dropdown-menu">
-							                <li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are?</span></a></li>
-							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do?</span></a></li>
+							                <li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are</span></a></li>
+							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do</span></a></li>
 							                <li><a href="#" id="home_3" class="dropdown-item"><span>Use Inspired AI</span></a></li>
 							                <li><a href="#" id="home_4" class="dropdown-item"><span>Human-Centric Approach</span></a></li>
 							                
@@ -299,26 +299,26 @@
 						<div class="col-lg-4 col-sm-6 d-flex mb-30 aos-init aos-animate" data-aos="fade-up">
 							<div class="block-style-seven">
 								<div class="icon d-flex align-items-end"><img src="{{- page.three_elements[0].icon -}}" alt=""></div>
-								<h5><a href="service-details-V1.html">{{ page.three_elements[0].title }}</a></h5>
+								<h5><a href="">{{ page.three_elements[0].title }}</a></h5>
 								<p>{{ page.three_elements[0].discription }}</p>
-								<a href="service-details-V1.html" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
+								<a href="" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
 							</div> <!-- /.block-style-seven -->
 						</div>
 						<div class="col-lg-4 col-sm-6 d-flex mb-30 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 							<div class="block-style-seven">
 								<div class="icon d-flex align-items-end"><img src="{{- page.three_elements[1].icon -}}" alt=""></div>
-								<h5><a href="service-details-V1.html">{{ page.three_elements[1].title }}</a></h5>
+								<h5><a href="">{{ page.three_elements[1].title }}</a></h5>
 								<p>{{ page.three_elements[1].discription }}</p>
-								<a href="service-details-V1.html" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
+								<a href="" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
 							</div> <!-- /.block-style-seven -->
 						</div>
 						<div class="col-lg-4 d-flex mb-30 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
 							<div class="block-style-seven">
 								<div class="icon d-flex align-items-end"><img src="{{- page.three_elements[2].icon -}}" alt=""></div>
-								<h5><a href="service-details-V1.html">{{ page.three_elements[2].title }}</a></h5>
+								<h5><a href="">{{ page.three_elements[2].title }}</a></h5>
 								<p>{{ page.three_elements[2].discription }}</p>
 								<div  id="home_11"></div>
-								<a href="service-details-V1.html" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
+								<a href="" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
 							
 							</div> <!-- /.block-style-seven -->
 						</div>
@@ -860,11 +860,11 @@
 				Blog Section Two
 			=====================================================
 			-->
-			<div class="blog-section-two mt-170 lg-mt-110">
+<!-- 			<div class="blog-section-two mt-170 lg-mt-110">
 				<div class="container">
 					<div class="title-style-one text-center mb-50 lg-mb-20" data-aos="fade-up">
 						<h2 class="main-title">{{ page.news[3].header_title }}</h2>
-					</div> <!-- /.title-style-one -->
+					</div> 
 
 					<div class="row gx-xxl-5">
 						<div class="col-lg-4 col-sm-6 d-flex" data-aos="fade-up">
@@ -874,7 +874,7 @@
 									<div class="post-tag"><a href="{{ page.news[0].link }}">{{ page.news[0].date }}</a></div>
 									<a href="{{ page.news[0].link }}" class="blog-title"><h5>{{ page.news[0].title }}</h5></a>
 									<a href="{{ page.news[0].link }}" class="read-btn tran3s">Continue Reading <i class="fas fa-chevron-right"></i></a>
-								</div> <!-- /.post-data -->
+								</div> 
 							</article>
 						</div>
 						<div class="col-lg-4 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="100">
@@ -884,7 +884,7 @@
 									<div class="post-tag"><a href="{{ page.news[1].link }}">{{ page.news[1].date }}</a></div>
 									<a href="blog-details.html" class="blog-title"><h5>{{ page.news[1].title }}</h5></a>
 									<a href="{{ page.news[1].link }}" class="read-btn tran3s">Continue Reading <i class="fas fa-chevron-right"></i></a>
-								</div> <!-- /.post-data -->
+								</div> 
 							</article>
 						</div>
 						<div class="col-lg-4 col-sm-6 d-flex" data-aos="fade-up" data-aos-delay="200">
@@ -894,7 +894,7 @@
 									<div class="post-tag"><a href="{{ page.news[2].link }}">{{ page.news[2].date }}</a></div>
 									<a href="{{ page.news[2].link }}" class="blog-title"><h5>{{ page.news[2].title }}</h5></a>
 									<a href="{{ page.news[2].link }}" class="read-btn tran3s">Continue Reading <i class="fas fa-chevron-right"></i></a>
-								</div> <!-- /.post-data -->
+								</div> 
 							</article>
 						</div>
 <!-- 						<div class="col-lg-4 col-sm-6 d-lg-none d-flex" data-aos="fade-up">
@@ -909,7 +909,7 @@
 							</article>
 						</div> -->
 					</div>
-				</div>
+				</div> -->
 			</div> <!-- /.blog-section-two -->
 
 
@@ -979,7 +979,7 @@
 								<ul class="footer-nav-link style-none">
 									<li><a href="index.html">Home</a></li>
 									<li><a href="empowerment.html">Empowerment</a></li>
-									<li><a href="areas_of_research.html">Areas of Research</a></li>
+									<li><a href="areas_of_research.html">Research</a></li>
 									<li><a href="team.html">Team</a></li>
 									<li><a href="contact.html">Contact Us</a></li>
 								</ul>
@@ -996,7 +996,7 @@
 							<div class="col-xl-4 col-lg-4 col-md-6 mb-30">
 								<div class="newsletter ps-xl-5">
 									<h5 class="footer-title">Subscribe </h5>
-									<p>Join over <span>68,000</span> people getting our emails</p>
+									<p>Join Our News Letter</p>
 									<form action="#">
 										<input type="email" placeholder="Enter your email">
 										<button>Sign Up</button>
