--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -860,7 +860,7 @@
 				Blog Section Two
 			=====================================================
 			-->
-<!-- 			<div class="blog-section-two mt-170 lg-mt-110">
+			<div class="blog-section-two mt-170 lg-mt-110">
 				<div class="container">
 					<div class="title-style-one text-center mb-50 lg-mb-20" data-aos="fade-up">
 						<h2 class="main-title">{{ page.news[3].header_title }}</h2>
@@ -909,7 +909,7 @@
 							</article>
 						</div> -->
 					</div>
-				</div> -->
+				</div> 
 			</div> <!-- /.blog-section-two -->
 
 
