--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -299,26 +299,26 @@
 						<div class="col-lg-4 col-sm-6 d-flex mb-30 aos-init aos-animate" data-aos="fade-up">
 							<div class="block-style-seven">
 								<div class="icon d-flex align-items-end"><img src="{{- page.three_elements[0].icon -}}" alt=""></div>
-								<h5><a href="">{{ page.three_elements[0].title }}</a></h5>
+								<h5><a>{{ page.three_elements[0].title }}</a></h5>
 								<p>{{ page.three_elements[0].discription }}</p>
-								<a href="" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
+								<a  class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
 							</div> <!-- /.block-style-seven -->
 						</div>
 						<div class="col-lg-4 col-sm-6 d-flex mb-30 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 							<div class="block-style-seven">
 								<div class="icon d-flex align-items-end"><img src="{{- page.three_elements[1].icon -}}" alt=""></div>
-								<h5><a href="">{{ page.three_elements[1].title }}</a></h5>
+								<h5><a>{{ page.three_elements[1].title }}</a></h5>
 								<p>{{ page.three_elements[1].discription }}</p>
-								<a href="" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
+								<a class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
 							</div> <!-- /.block-style-seven -->
 						</div>
 						<div class="col-lg-4 d-flex mb-30 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
 							<div class="block-style-seven">
 								<div class="icon d-flex align-items-end"><img src="{{- page.three_elements[2].icon -}}" alt=""></div>
-								<h5><a href="">{{ page.three_elements[2].title }}</a></h5>
+								<h5><a>{{ page.three_elements[2].title }}</a></h5>
 								<p>{{ page.three_elements[2].discription }}</p>
 								<div  id="home_11"></div>
-								<a href="" class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
+								<a class="tran3s more-btn"><img src="images/icon/icon_20.svg" alt=""></a>
 							
 							</div> <!-- /.block-style-seven -->
 						</div>
@@ -861,7 +861,7 @@
 			=====================================================
 			-->
 			<div class="blog-section-two mt-170 lg-mt-110">
-				<div class="container">
+				<!-- <div class="container">
 					<div class="title-style-one text-center mb-50 lg-mb-20" data-aos="fade-up">
 						<h2 class="main-title">{{ page.news[3].header_title }}</h2>
 					</div> 
@@ -908,7 +908,7 @@
 								
 							</article>
 						</div> -->
-					</div>
+					</div> -->
 				</div> 
 			</div> <!-- /.blog-section-two -->
 
