--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -861,7 +861,7 @@
 			=====================================================
 			-->
 			<div class="blog-section-two mt-170 lg-mt-110">
-				<!-- <div class="container">
+				<div style ="display:none;" class="container">
 					<div class="title-style-one text-center mb-50 lg-mb-20" data-aos="fade-up">
 						<h2 class="main-title">{{ page.news[3].header_title }}</h2>
 					</div> 
@@ -908,7 +908,7 @@
 								
 							</article>
 						</div> -->
-					</div> -->
+					</div> 
 				</div> 
 			</div> <!-- /.blog-section-two -->
 
