--- a/_layouts/empowerment.html
+++ b/_layouts/empowerment.html
@@ -115,8 +115,8 @@
 							        <li class="nav-item dropdown">
 							        	<a class="nav-link dropdown-toggle" href="index.html" role="button">Home</a>
 							        	<ul class="dropdown-menu">
-									<li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are?</span></a></li>
-							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do?</span></a></li>
+									<li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are</span></a></li>
+							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do</span></a></li>
 							                <li><a href="#" id="home_3" class="dropdown-item"><span>Use Inspired AI</span></a></li>
 							                <li><a href="#" id="home_4" class="dropdown-item"><span>Human-Centric Approach</span></a></li>
 						                </ul>
@@ -125,14 +125,14 @@
 							        	<a class="nav-link dropdown-toggle active" href="empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
 							                <li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_1" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>The empowerment concept</span></a>
+							                	<a id ="empowerment_1" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="about-us1.html" class="dropdown-item"><span>About Us One</span></a></li>
 										            <li><a href="about-us2.html" class="dropdown-item"><span>About Us Two</span></a></li>
 									            </ul> -->
 							                </li>
 							                <li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_2" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Mutually beneficial</span></a>
+							                	<a id ="empowerment_2" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="service-V1.html" class="dropdown-item"><span>Service One</span></a></li>
 										            <li><a href="service-V2.html" class="dropdown-item"><span>Service Two</span></a></li>
@@ -140,14 +140,14 @@
 									            </ul> -->
 							                </li>
 							                <li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_3"class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
+							                	<a id ="empowerment_3"class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Applications</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
 									            </ul> -->
 							                </li>
 											<li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_4" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Evaluating in Real-life Settings</span></a>
+							                	<a id ="empowerment_4" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Knowledge Base</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
@@ -167,7 +167,7 @@
 						                </ul>
 						            </li>
 						            <li class="nav-item dropdown">
-										<a  class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Areas of Research</a>
+										<a  class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Research</a>
 							        	<ul class="dropdown-menu">
 							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Trustworthy AI</span></a></li>
 							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>Active Learning</span></a></li>
@@ -177,13 +177,13 @@
 						            </li>
 							        <li class="nav-item dropdown">
 							        	<a class="nav-link dropdown-toggle" href="team.html" role="button">Team</a>
-						                <ul class="dropdown-menu">
+<!-- 						                <ul class="dropdown-menu">
 							                <li><a href="blog-V1.html" class="dropdown-item"><span>Open Innovation</span></a></li>
 							                <li><a href="blog-V2.html" class="dropdown-item"><span>Members</span></a></li>
-							                <!-- <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
+							                <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
 							                <li><a href="blog-V4.html" class="dropdown-item"><span>Blog Standard</span></a></li>
-							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li> -->
-						                </ul>
+							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li>
+						                </ul> -->
 						            </li>
 						            <li class="nav-item ">
 							        	<a class="nav-link " href="contact.html" role="button">Contact</a>
@@ -1085,7 +1085,7 @@
 								<ul class="footer-nav-link style-none">
 									<li><a href="index.html">Home</a></li>
 									<li><a href="empowerment.html">Empowerment</a></li>
-									<li><a href="areas_of_research.html">Areas of Research</a></li>
+									<li><a href="areas_of_research.html">Research</a></li>
 									<li><a href="team.html">Team</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
