--- a/_layouts/empowerment.html
+++ b/_layouts/empowerment.html
@@ -132,7 +132,7 @@
 									            </ul> -->
 							                </li>
 							                <li class="dropdown-submenu ">
-							                	<a id ="empowerment_2" class="dropdown-item dropdown-toggle"  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
+							                	<a id ="empowerment_2" class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="service-V1.html" class="dropdown-item"><span>Service One</span></a></li>
 										            <li><a href="service-V2.html" class="dropdown-item"><span>Service Two</span></a></li>
