--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -115,7 +115,7 @@
 							        <li class="nav-item dropdown">
 							        	<a class="nav-link dropdown-toggle" href="index.html" role="button">Home</a>
 							        	<ul class="dropdown-menu">
-									<li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are?</span></a></li>
+									<li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are</span></a></li>
 							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do?</span></a></li>
 							                <li><a href="#" id="home_3" class="dropdown-item"><span>Use Inspired AI</span></a></li>
 							                <li><a href="#" id="home_4" class="dropdown-item"><span>Human-Centric Approach</span></a></li>
@@ -210,10 +210,10 @@
 			-->
 			<div class="theme-inner-banner">
 				<div class="container">
-					<h2 class="intro-title text-center">Areas of Research</h2>
+					<h2 class="intro-title text-center">Research</h2>
 					<ul class="page-breadcrumb style-none d-flex justify-content-center">
 						<li><a href="index-main.html">Home</a></li>
-						<li class="current-page">Areas of Research</li>
+						<li class="current-page"> Research</li>
 					</ul>
 					<img src="images/shape/shape_38.svg" alt="" class="shapes shape-one">
 					<div id="Areas_research_11"></div>
