--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,33 +129,33 @@
 							                
 						                </ul>
 						            </li>
-						            <li class="nav-item dropdown">
-							        	<a id ="nav_text_color_main_page"class="nav-link dropdown-toggle" href="empowerment.html" role="button">Empowerment</a>
+						            <li class="nav-item dropdown active">
+							        	<a class="nav-link dropdown-toggle active" href="empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
-							                <li class="dropdown-submenu dropdown">
-							                	<a id="empowerment_1" class="dropdown-item dropdown-toggle" href="#"><span>The empowerment concept</span></a>
+							                <li class="dropdown-submenu">
+							                	<a id ="empowerment_1" class="dropdown-item"  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="about-us1.html" class="dropdown-item"><span>About Us One</span></a></li>
 										            <li><a href="about-us2.html" class="dropdown-item"><span>About Us Two</span></a></li>
 									            </ul> -->
 							                </li>
-							                <li class="dropdown-submenu dropdown">
-							                	<a id="empowerment_2" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Mutually beneficial</span></a>
+							                <li class="dropdown-submenu ">
+							                	<a id ="empowerment_2" class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="service-V1.html" class="dropdown-item"><span>Service One</span></a></li>
 										            <li><a href="service-V2.html" class="dropdown-item"><span>Service Two</span></a></li>
 										            <li><a href="service-details-V1.html" class="dropdown-item"><span>Service Details</span></a></li>
 									            </ul> -->
 							                </li>
-							                <li class="dropdown-submenu dropdown">
-							                	<a id="empowerment_3" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
+							                <li class="dropdown-submenu ">
+							                	<a id ="empowerment_3"class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Applications</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
 									            </ul> -->
 							                </li>
-											<li class="dropdown-submenu dropdown">
-							                	<a id="empowerment_4" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Evaluating in Real-life Settings</span></a>
+											<li class="dropdown-submenu ">
+							                	<a id ="empowerment_4" class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Knowledge Base</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
