--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,8 +129,8 @@
 							                
 						                </ul>
 						            </li>
-						            <li class="nav-item dropdown active">
-							        	<a class="nav-link dropdown-toggle active" href="empowerment.html" role="button">Empowerment</a>
+						            <li class="nav-item dropdown">
+							        	<a class="nav-link dropdown-toggle " href="empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
 							                <li class="dropdown-submenu">
 							                	<a id ="empowerment_1" class="dropdown-item"  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
