--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,10 +99,10 @@
 				Theme Main Menu
 			============================================== 
 			-->
-			<header id="main_header"class="theme-main-menu sticky-menu theme-menu-four">
+					<header id="main_header"class="theme-main-menu sticky-menu theme-menu-four">
 				<div class="inner-content">
 					<div class="d-flex align-items-center">
-						<div class="logo order-lg-0"><a href="index-main.html" class="d-block"><img src="images/logo/HCAI_LOGO_MAIN-03.png" alt="" width="100"></a></div>
+						<!-- <div class="logo order-lg-0"><a href="index.html" class="d-block"><img src="images/logo/logo_03.png" alt="" width="90"></a></div> -->
 
 						<!-- <div style="visibility: hidden;" class="right-widget d-flex align-items-center ms-auto order-lg-3">
 							<div class="call-button d-none d-xl-block me-5">Call us <a href="#">(+880) 321 782 110</a></div>
@@ -120,42 +120,42 @@
 						    	<ul class="navbar-nav">
 						    		<li class="d-block d-lg-none"><div class="logo"><a href="index.html"><img src="images/logo/logo_01.png" alt="" width="130"></a></div></li>
 							        <li class="nav-item dropdown active">
-							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle active" href="index.html" role="button">Home</a>
+							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle active" href="Index-main.html" role="button">Home</a>
 							        	<ul class="dropdown-menu">
-							                <li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are</span></a></li>
-							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do</span></a></li>
+							                <li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are?</span></a></li>
+							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do?</span></a></li>
 							                <li><a href="#" id="home_3" class="dropdown-item"><span>Use Inspired AI</span></a></li>
 							                <li><a href="#" id="home_4" class="dropdown-item"><span>Human-Centric Approach</span></a></li>
 							                
 						                </ul>
 						            </li>
 						            <li class="nav-item dropdown">
-							        	<a class="nav-link dropdown-toggle " href="empowerment.html" role="button">Empowerment</a>
+							        	<a id ="nav_text_color_main_page"class="nav-link dropdown-toggle" href="index.empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
-							                <li class="dropdown-submenu">
-							                	<a id ="empowerment_1" class="dropdown-item"  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
+							                <li class="dropdown-submenu dropdown">
+							                	<a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>The empowerment concept</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="about-us1.html" class="dropdown-item"><span>About Us One</span></a></li>
 										            <li><a href="about-us2.html" class="dropdown-item"><span>About Us Two</span></a></li>
 									            </ul> -->
 							                </li>
-							                <li class="dropdown-submenu ">
-							                	<a id ="empowerment_2" class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
+							                <li class="dropdown-submenu dropdown">
+							                	<a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Mutually beneficial</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="service-V1.html" class="dropdown-item"><span>Service One</span></a></li>
 										            <li><a href="service-V2.html" class="dropdown-item"><span>Service Two</span></a></li>
 										            <li><a href="service-details-V1.html" class="dropdown-item"><span>Service Details</span></a></li>
 									            </ul> -->
 							                </li>
-							                <li class="dropdown-submenu ">
-							                	<a id ="empowerment_3"class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Applications</span></a>
+							                <li class="dropdown-submenu dropdown">
+							                	<a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
 									            </ul> -->
 							                </li>
-											<li class="dropdown-submenu ">
-							                	<a id ="empowerment_4" class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Knowledge Base</span></a>
+											<li class="dropdown-submenu dropdown">
+							                	<a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Evaluating in Real-life Settings</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
@@ -175,26 +175,26 @@
 						                </ul>
 						            </li>
 						            <li  class="nav-item dropdown ">
-										<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Research</a>
+										<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="index-Areas_of_research.html" role="button">Areas of Research</a>
 							        	<ul class="dropdown-menu">
-							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Trustworthy AI</span></a></li>
-							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>Active Learning</span></a></li>
-							                <li><a id="Areas_of_research_3" href="#" class="dropdown-item"><span>AI for Social Good</span></a></li>
-							                <li><a id="Areas_of_research_4" href="#" class="dropdown-item"><span>Crowdsourcing</span></a></li>
+							                <li><a href="portfolio-V1.html" class="dropdown-item"><span>Trustworthy AI</span></a></li>
+							                <li><a href="portfolio-V2.html" class="dropdown-item"><span>Active Learning</span></a></li>
+							                <li><a href="portfolio-V3.html" class="dropdown-item"><span>AI for Social Good</span></a></li>
+							                <li><a href="portfolio-details-V1.html" class="dropdown-item"><span>Crowdsourcing</span></a></li>
 						                </ul>
 						            </li>
 							        <li  class="nav-item dropdown">
-							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="team.html" role="button">Team</a>
-<!-- 						                <ul class="dropdown-menu">
+							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="index-team.html" role="button">Team</a>
+						                <ul class="dropdown-menu">
 							                <li><a href="blog-V1.html" class="dropdown-item"><span>Open Innovation</span></a></li>
 							                <li><a href="blog-V2.html" class="dropdown-item"><span>Members</span></a></li>
-							                <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
+							                <!-- <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
 							                <li><a href="blog-V4.html" class="dropdown-item"><span>Blog Standard</span></a></li>
-							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li>
-						                </ul> -->
+							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li> -->
+						                </ul>
 						            </li>
 						            <li class="nav-item ">
-							        	<a id ="nav_text_color_main_page" class="nav-link " href="contact.html" role="button">Contact</a>
+							        	<a id ="nav_text_color_main_page" class="nav-link " href="contact-us.html" role="button">Contact</a>
 						            </li>
 						    	</ul>
 						    	<!-- Mobile Content -->
@@ -209,7 +209,6 @@
 					</div>
 				</div> <!-- /.inner-content -->
 			</header>
-
 			
 			
 			<!-- 
