--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,20 +120,20 @@
 						    	<ul class="navbar-nav">
 						    		<li class="d-block d-lg-none"><div class="logo"><a href="index.html"><img src="images/logo/logo_01.png" alt="" width="130"></a></div></li>
 							        <li class="nav-item dropdown active">
-							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle active" href="Index-main.html" role="button">Home</a>
+							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle active" href="index.html" role="button">Home</a>
 							        	<ul class="dropdown-menu">
-							                <li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are?</span></a></li>
-							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do?</span></a></li>
+							                <li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are</span></a></li>
+							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do</span></a></li>
 							                <li><a href="#" id="home_3" class="dropdown-item"><span>Use Inspired AI</span></a></li>
 							                <li><a href="#" id="home_4" class="dropdown-item"><span>Human-Centric Approach</span></a></li>
 							                
 						                </ul>
 						            </li>
 						            <li class="nav-item dropdown">
-							        	<a id ="nav_text_color_main_page"class="nav-link dropdown-toggle" href="index.empowerment.html" role="button">Empowerment</a>
+							        	<a id ="nav_text_color_main_page"class="nav-link dropdown-toggle" href="empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
 							                <li class="dropdown-submenu dropdown">
-							                	<a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>The empowerment concept</span></a>
+							                	<a class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="about-us1.html" class="dropdown-item"><span>About Us One</span></a></li>
 										            <li><a href="about-us2.html" class="dropdown-item"><span>About Us Two</span></a></li>
@@ -175,7 +175,7 @@
 						                </ul>
 						            </li>
 						            <li  class="nav-item dropdown ">
-										<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="index-Areas_of_research.html" role="button">Areas of Research</a>
+										<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Areas of Research</a>
 							        	<ul class="dropdown-menu">
 							                <li><a href="portfolio-V1.html" class="dropdown-item"><span>Trustworthy AI</span></a></li>
 							                <li><a href="portfolio-V2.html" class="dropdown-item"><span>Active Learning</span></a></li>
@@ -184,7 +184,7 @@
 						                </ul>
 						            </li>
 							        <li  class="nav-item dropdown">
-							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="index-team.html" role="button">Team</a>
+							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="team.html" role="button">Team</a>
 						                <ul class="dropdown-menu">
 							                <li><a href="blog-V1.html" class="dropdown-item"><span>Open Innovation</span></a></li>
 							                <li><a href="blog-V2.html" class="dropdown-item"><span>Members</span></a></li>
@@ -194,7 +194,7 @@
 						                </ul>
 						            </li>
 						            <li class="nav-item ">
-							        	<a id ="nav_text_color_main_page" class="nav-link " href="contact-us.html" role="button">Contact</a>
+							        	<a id ="nav_text_color_main_page" class="nav-link " href="contact.html" role="button">Contact</a>
 						            </li>
 						    	</ul>
 						    	<!-- Mobile Content -->
