--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -121,8 +121,8 @@
 							                <li><a href="#" id="home_4" class="dropdown-item"><span>Human-Centric Approach</span></a></li>
 						                </ul>
 						            </li>
-						            <li class="nav-item dropdown active">
-							        	<a class="nav-link dropdown-toggle active" href="empowerment.html" role="button">Empowerment</a>
+						            <li class="nav-item dropdown ">
+							        	<a class="nav-link dropdown-toggle" href="empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
 							                <li class="dropdown-submenu">
 							                	<a id ="empowerment_1" class="dropdown-item"  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
@@ -166,8 +166,8 @@
 							                <li><a href="pricing.html" class="dropdown-item"><span>Our Pricing</span></a></li> -->
 						                </ul>
 						            </li>
-						            <li class="nav-item dropdown">
-										<a  class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Research</a>
+						            <li class="nav-item dropdown active">
+										<a  class="nav-link dropdown-toggle active" href="areas_of_research.html" role="button">Research</a>
 							        	<ul class="dropdown-menu">
 							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Human-Centered AI</span></a></li>
 							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>AI For Social Good</span></a></li>
