--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,10 +129,10 @@
 							                
 						                </ul>
 						            </li>
-						            <li class="nav-item dropdown active">
-							        	<a class="nav-link dropdown-toggle active" href="empowerment.html" role="button">Empowerment</a>
+						            <li class="nav-item dropdown">
+							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
-							                <li class="dropdown-submenu">
+							                <li class="dropdown-submenu dropdown">
 							                	<a id ="empowerment_1" class="dropdown-item"  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="about-us1.html" class="dropdown-item"><span>About Us One</span></a></li>
