--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -175,23 +175,23 @@
 						                </ul>
 						            </li>
 						            <li  class="nav-item dropdown ">
-										<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Areas of Research</a>
+										<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Research</a>
 							        	<ul class="dropdown-menu">
-							                <li><a href="portfolio-V1.html" class="dropdown-item"><span>Trustworthy AI</span></a></li>
-							                <li><a href="portfolio-V2.html" class="dropdown-item"><span>Active Learning</span></a></li>
-							                <li><a href="portfolio-V3.html" class="dropdown-item"><span>AI for Social Good</span></a></li>
-							                <li><a href="portfolio-details-V1.html" class="dropdown-item"><span>Crowdsourcing</span></a></li>
+							               <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Human-Centered AI</span></a></li>
+							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>AI For Social Good</span></a></li>
+							                <li><a id="Areas_of_research_3" href="#" class="dropdown-item"><span>Trustworthy AI</span></a></li>
+							                <li> <a id="Areas_of_research_4" href="#" href="portfolio-details-V1.html" class="dropdown-item"><span>Crowdsourcing</span></a></li>
 						                </ul>
 						            </li>
 							        <li  class="nav-item dropdown">
 							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle" href="team.html" role="button">Team</a>
-						                <ul class="dropdown-menu">
+<!-- 						                <ul class="dropdown-menu">
 							                <li><a href="blog-V1.html" class="dropdown-item"><span>Open Innovation</span></a></li>
 							                <li><a href="blog-V2.html" class="dropdown-item"><span>Members</span></a></li>
-							                <!-- <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
+							                <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
 							                <li><a href="blog-V4.html" class="dropdown-item"><span>Blog Standard</span></a></li>
-							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li> -->
-						                </ul>
+							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li>
+						                </ul> -->
 						            </li>
 						            <li class="nav-item ">
 							        	<a id ="nav_text_color_main_page" class="nav-link " href="contact.html" role="button">Contact</a>
