--- a/_layouts/empowerment.html
+++ b/_layouts/empowerment.html
@@ -169,9 +169,9 @@
 						            <li class="nav-item dropdown">
 										<a  class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Research</a>
 							        	<ul class="dropdown-menu">
-							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Trustworthy AI</span></a></li>
-							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>Active Learning</span></a></li>
-							                <li><a id="Areas_of_research_3" href="#" class="dropdown-item"><span>AI for Social Good</span></a></li>
+							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Human-Centered AI</span></a></li>
+							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>AI For Social Good</span></a></li>
+							                <li><a id="Areas_of_research_3" href="#" class="dropdown-item"><span>Trustworthy AI</span></a></li>
 							                <li> <a id="Areas_of_research_4" href="#" href="portfolio-details-V1.html" class="dropdown-item"><span>Crowdsourcing</span></a></li>
 						                </ul>
 						            </li>
