--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -114,8 +114,8 @@
 							        <li class="nav-item dropdown">
 							        	<a class="nav-link dropdown-toggle" href="index.html" role="button">Home</a>
 							        	<ul class="dropdown-menu">
-											<li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are?</span></a></li>
-							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do?</span></a></li>
+											<li><a href="#" id="home_1" class="dropdown-item"><span>Who We Are</span></a></li>
+							                <li><a href="#" id="home_2" class="dropdown-item"><span>What We do</span></a></li>
 							                <li><a href="#" id="home_3" class="dropdown-item"><span>Use Inspired AI</span></a></li>
 							                <li><a href="#" id="home_4" class="dropdown-item"><span>Human-Centric Approach</span></a></li>
 						                </ul>
@@ -123,30 +123,30 @@
 						            <li class="nav-item dropdown">
 							        	<a class="nav-link dropdown-toggle" href="empowerment.html" role="button">Empowerment</a>
 							        	<ul class="dropdown-menu">
-							                <li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_1" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>The empowerment concept</span></a>
+							                <li class="dropdown-submenu">
+							                	<a id ="empowerment_1" class="dropdown-item"  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Empowerment</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="about-us1.html" class="dropdown-item"><span>About Us One</span></a></li>
 										            <li><a href="about-us2.html" class="dropdown-item"><span>About Us Two</span></a></li>
 									            </ul> -->
 							                </li>
-							                <li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_2" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Mutually beneficial</span></a>
+							                <li class="dropdown-submenu ">
+							                	<a id ="empowerment_2" class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="service-V1.html" class="dropdown-item"><span>Service One</span></a></li>
 										            <li><a href="service-V2.html" class="dropdown-item"><span>Service Two</span></a></li>
 										            <li><a href="service-details-V1.html" class="dropdown-item"><span>Service Details</span></a></li>
 									            </ul> -->
 							                </li>
-							                <li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_3"class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Well-being</span></a>
+							                <li class="dropdown-submenu ">
+							                	<a id ="empowerment_3"class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Applications</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
 									            </ul> -->
 							                </li>
-											<li class="dropdown-submenu dropdown">
-							                	<a id ="empowerment_4" class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Evaluating in Real-life Settings</span></a>
+											<li class="dropdown-submenu ">
+							                	<a id ="empowerment_4" class="dropdown-item "  data-bs-auto-close="outside" aria-expanded="false" href="#"><span>Knowledge Base</span></a>
 							                	<!-- <ul class="dropdown-menu">
 									            	<li><a href="team.html" class="dropdown-item"><span>Team Member</span></a></li>
 										            <li><a href="team-details.html" class="dropdown-item"><span>Team Details</span></a></li>
@@ -168,21 +168,21 @@
 						            <li class="nav-item dropdown">
 										<a  class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Areas of Research</a>
 							        	<ul class="dropdown-menu">
-							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Trustworthy AI</span></a></li>
-							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>Active Learning</span></a></li>
-							                <li><a id="Areas_of_research_3" href="#" class="dropdown-item"><span>AI for Social Good</span></a></li>
+							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Human-Centered AI</span></a></li>
+							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>AI For Social Good</span></a></li>
+							                <li><a id="Areas_of_research_3" href="#" class="dropdown-item"><span>Trustworthy AI</span></a></li>
 							                <li> <a id="Areas_of_research_4" href="#" href="portfolio-details-V1.html" class="dropdown-item"><span>Crowdsourcing</span></a></li>
 						                </ul>
 						            </li>
 							        <li class="nav-item dropdown active">
 							        	<a class="nav-link dropdown-toggle" href="team.html" role="button">Team</a>
-						                <ul class="dropdown-menu">
+<!-- 						                <ul class="dropdown-menu">
 							                <li><a href="blog-V1.html" class="dropdown-item"><span>Open Innovation</span></a></li>
 							                <li><a href="blog-V2.html" class="dropdown-item"><span>Members</span></a></li>
-							                <!-- <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
+							                <li><a href="blog-V3.html" class="dropdown-item"><span>Blog Masonary</span></a></li>
 							                <li><a href="blog-V4.html" class="dropdown-item"><span>Blog Standard</span></a></li>
-							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li> -->
-						                </ul>
+							                <li><a href="blog-details.html" class="dropdown-item"><span>Blog Details</span></a></li>
+						                </ul> -->
 						            </li>
 						            <li class="nav-item ">
 							        	<a class="nav-link " href="contact.html" role="button">Contact</a>
