--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -420,7 +420,7 @@
 								<ul class="footer-nav-link style-none">
 									<li><a href="index.html">Home</a></li>
 									<li><a href="empowerment.html">Empowerment</a></li>
-									<li><a href="aereas_of_research.html">Areas of Research</a></li>
+									<li><a href="aereas_of_research.html"> Research</a></li>
 									<li><a href="team.html">Team</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
