--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -166,7 +166,7 @@
 						                </ul>
 						            </li>
 						            <li class="nav-item dropdown">
-										<a  class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Areas of Research</a>
+										<a  class="nav-link dropdown-toggle" href="areas_of_research.html" role="button">Research</a>
 							        	<ul class="dropdown-menu">
 							                <li><a id="Areas_of_research_1" href="#" class="dropdown-item"><span>Human-Centered AI</span></a></li>
 							                <li><a id="Areas_of_research_2" href="#" class="dropdown-item"><span>AI For Social Good</span></a></li>
