--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -315,10 +315,10 @@
 					<div class="bg-wrapper">
 						<div class="row align-items-center">
 							<div class="col-lg-6 text-center text-lg-start" data-aos="fade-right">
-								<h3 class="pe-xxl-5 md-pb-20">Having any Query? Book an appointment.</h3>
+								<h3 class="pe-xxl-5 md-pb-20">{{ page.blue_banner[0].title }}</h3>
 							</div>
 							<div class="col-lg-6 text-center text-lg-end" data-aos="fade-left">
-								<a href="contact-us.html" class="msg-btn tran3s">Send Us Message</a>
+								<a href="contact-us.html" class="msg-btn tran3s">{{ page.blue_banner[0].button_text }}</a>
 							</div>
 						</div>
 					</div> <!-- /.bg-wrapper -->
