--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -266,7 +266,7 @@
 											<div class="col-12">
 												<div class="input-group-meta form-group mb-30">
 													<label>Name*</label>
-													<input type="text" placeholder="Rashed Kabir" name="name" required="required" data-error="Name is required.">
+													<input type="text" placeholder="Your name" name="name" required="required" data-error="Name is required.">
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
@@ -274,7 +274,7 @@
 											<div class="col-12">
 												<div class="input-group-meta form-group mb-30">
 													<label>Email*</label>
-													<input type="email" placeholder="rshdkabir@gmail.com" name="email" required="required" data-error="Valid email is required.">
+													<input type="email" placeholder="abc@gmail.com" name="email" required="required" data-error="Valid email is required.">
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
