--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -278,7 +278,7 @@
 						<div style ="margin-bottom: 10px" class="col-xl-4 col-lg-4 col-sm-6" data-aos="fade-up">
 							<div class="team-block-one tran3s mt-50">
 								<div class="img-meta"><img src="{{- member.image -}}" alt="" class="w-100"></div>
-								<a href="index_team_details.html" class="team-info">
+								<a  class="team-info">
 									<span class="designation-text">{{ member.title }}</span>
 									<span class="name tran3s">{{ member.name }}</span>
 								</a>
@@ -289,7 +289,7 @@
 <!-- 						<div class="col-xl-4 col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
 							<div class="team-block-one tran3s mt-50 md-mt-30">
 								<div class="img-meta"><img src="{{- page.member_2[0].image -}}" alt="" class="w-100"></div>
-								<a href="team-details.html" class="team-info">
+								<a  class="team-info">
 									<span class="designation-text">{{ page.member_2[0].title }}</span>
 									<span class="name tran3s">{{ page.member_2[0].name }}</span>
 								</a>
@@ -298,7 +298,7 @@
  						<div class="col-xl-4 col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
 							<div class="team-block-one tran3s mt-50 md-mt-30">
 								<div class="img-meta"><img src="{{- page.member_3[0].image -}}" alt="" class="w-100"></div>
-								<a href="team-details.html" class="team-info">
+								<a  class="team-info">
 									<span class="designation-text">{{ page.member_3[0].title }}</span>
 									<span class="name tran3s">{{ page.member_3[0].name }}</span>
 								</a>
