--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -260,7 +260,7 @@
 							<div class="col-lg-6 d-flex order-lg-last">
 								<div class="form-style-one">
 									<h3 class="form-title pb-40 lg-pb-20">Send Message.</h3>
-									<form action="inc/contact.php" id="contact-form" data-toggle="validator" novalidate="true">
+									<form action="js/contact.js" id="contact-form" data-toggle="validator" novalidate="true">
 										<div class="messages"></div>
 										<div class="row controls">
 											<div class="col-12">
@@ -284,7 +284,7 @@
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
-											<div class="col-12"><button class="btn-eight ripple-btn">Send Message</button></div>
+											<div class="col-12"><button type="submit" class="btn-eight ripple-btn">Send Message</button></div>
 										</div>
 									</form>
 								</div> <!-- /.form-style-one -->
