--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -266,7 +266,7 @@
 											<div class="col-12">
 												<div class="input-group-meta form-group mb-30">
 													<label>Name*</label>
-													<input type="text" placeholder="Your name" name="name" required="required" data-error="Name is required.">
+													<input class ="name" type="text" placeholder="Your name" name="name" required="required" data-error="Name is required.">
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
@@ -274,13 +274,13 @@
 											<div class="col-12">
 												<div class="input-group-meta form-group mb-30">
 													<label>Email*</label>
-													<input type="email" placeholder="abc@gmail.com" name="email" required="required" data-error="Valid email is required.">
+													<input class="email" type="email" placeholder="abc@gmail.com" name="email" required="required" data-error="Valid email is required.">
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
 											<div class="col-12">
 												<div class="input-group-meta form-group mb-30">
-													<textarea placeholder="Your message*" name="message" required="required" data-error="Please,leave us a message."></textarea>
+													<textarea class="message" placeholder="Your message*" name="message" required="required" data-error="Please,leave us a message."></textarea>
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
