--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -35,6 +35,7 @@
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<script src="vendor/html5shiv.js"></script>
 		<script src="vendor/respond.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.13.0/firebase.js"></script>
 		<![endif]-->	
 	</head>
 
