--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -28,7 +28,7 @@
 		<link rel="stylesheet" type="text/css" href="css/contact.css" media="all">
 		<link rel="stylesheet" type="text/css" href="css/team.css" media="all">
 		<link rel="stylesheet" type="text/css" href="css/white.css" media="all">
-		<script src="https://www.gstatic.com/firebasejs/9.13.0/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.13.0/firebase.js"></script>
 
 		<!-- responsive style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/responsive.css" media="all">
