--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -297,7 +297,7 @@
 								<div class="map-area-one mt-10 me-lg-4 md-mt-50">
 									<div class="mapouter">
 										<div class="gmap_canvas">
-											<iframe class="gmap_iframe" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=dhaka collage&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+											<iframe class="gmap_iframe" src="https://www.google.com/maps/place/McAdams+Hall/@34.675839,-82.8367557,17z/data=!3m2!4b1!5s0x88585e6ce1cf2885:0x4dc0729f84007ae!4m5!3m4!1s0x88585e6ce27bf36d:0x59cfe667a62f7af!8m2!3d34.675839!4d-82.834567"></iframe>
 										</div>
 									</div>
 								</div> <!-- /.map-area-one -->
