--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -297,7 +297,8 @@
 								<div class="map-area-one mt-10 me-lg-4 md-mt-50">
 									<div class="mapouter">
 										<div class="gmap_canvas">
-											<iframe class="gmap_iframe" src="https://www.google.com/maps/place/McAdams+Hall/@34.675839,-82.8367557,17z/data=!3m2!4b1!5s0x88585e6ce1cf2885:0x4dc0729f84007ae!4m5!3m4!1s0x88585e6ce27bf36d:0x59cfe667a62f7af!8m2!3d34.675839!4d-82.834567"></iframe>
+<!-- 											<iframe class="gmap_iframe" src="https://www.google.com/maps/place/McAdams+Hall/@34.675839,-82.8367557,17z/data=!3m2!4b1!5s0x88585e6ce1cf2885:0x4dc0729f84007ae!4m5!3m4!1s0x88585e6ce27bf36d:0x59cfe667a62f7af!8m2!3d34.675839!4d-82.834567"></iframe> -->
+											<iframe class="gmap_iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14483.422560716279!2d-82.84338499263448!3d34.66981463221395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88585e6ce27bf36d%3A0x59cfe667a62f7af!2sMcAdams%20Hall!5e0!3m2!1sen!2sus!4v1668094697227!5m2!1sen!2sus"></iframe>
 										</div>
 									</div>
 								</div> <!-- /.map-area-one -->
