--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -442,6 +442,7 @@
 		<!-- Theme js -->
 		<script src="js/theme.js"></script>
 		<script src="js/contact.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
 
 
 		</div> <!-- /.main-page-wrapper -->
