--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -31,7 +31,7 @@
 
 		<!-- responsive style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/responsive.css" media="all">
-		<script src="https://www.gstatic.com/firebasejs/9.13.0/firebase-app.js"></script>
+<!-- 		<script src="https://www.gstatic.com/firebasejs/9.13.0/firebase-app.js"></script> -->
 
 		<!-- Fix Internet Explorer ______________________________________-->
 		<!--[if lt IE 9]>
