--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -442,7 +442,7 @@
 		<!-- Theme js -->
 		<script src="js/theme.js"></script>
 		<script src="js/contact.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.13.0/firebase.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.13.0/firebase-app.js"></script>
 
 
 		</div> <!-- /.main-page-wrapper -->
